--- a/.github/workflows/NeteaseCloudMusicApi.yml
+++ b/.github/workflows/NeteaseCloudMusicApi.yml
@@ -1,4 +1,4 @@
-name: lede-auto-sync
+name: NeteaseCloudMusicApi
 
 on:
   push:
@@ -15,9 +15,9 @@ jobs:
     steps:
       - uses: TobKed/github-forks-sync-action@master
         with:
-          github_token: ${{ secrets.ACTION_BUILD_TOKEN }} # 令牌
-          upstream_repository: coolsnowwolf/lede  # 上游仓库
-          target_repository: dylan8888/lede  # 你要推送的仓库
+          github_token: ${{ secrets.GITHUB_TOKEN }} # 令牌
+          upstream_repository: Binaryify/NeteaseCloudMusicApi  # 上游仓库
+          target_repository: ANTLEEI/NeteaseCloudMusicApi  # 你要推送的仓库
           upstream_branch: master  # 默认是拉取上游仓库的master分支
           target_branch: master  # 默认推送到你的仓库master分支
           force: true  # 是否强制推送
